@@ -26,6 +26,7 @@
     * Added endpoint for abort current download process
     * Require user attention after each print, even failed ones (if enabled)
     * Added checked and finished flags to api/printer
+    * Added states structure to api/connection endpoint
 
 0.4.0 (2021-04-13)
     * getting IP refactoring
